# bookmark-cleaner

./: README.md  pyproject.toml
bookmark_cleaner/: api.py  cleaner.py  cluster.py  constant.py  generate.py  summarize.py  url.py  utils.py
